submit/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: submit
  labels:
    istio-injection: enabled
