submit/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: submit
  namespace: submit
  labels:
    app: submit
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
      name: http
  selector:
    app: submit
